Version 2.7.3dev:

* Respect cpu option when checking for Zorro III config problems.

Version 2.7.2dev:

* Enable FPU JIT compilation by default on x86-64.
* Use high-res timer on Windows for fastest-possible mode (perf fix).
* Parallel port ("printer") over TCP/IP, added parallel_port option.
* Fixed crash (abort) with A1200 Blizzard CPU board models.
* Added Lallafa's vpar virtual parallel port (not tested).
* Serial port over TCP/IP.
* More efficient uae_vm_commit for Linux and OS X.
* Updated emulation core from WinUAE 3200b15.

Version 2.7.1dev:

* Several FPU JIT fixes for x86-64 (fixes crashes and misbehavior).
* Access fault handler supports x86-64 extended registers (REX prefix).
* Fixed crash when 1 GB Zorro III RAM was used without other Z3 expansions.
* Fixed non-blocking socket I/O support in bsdsocket_posix [Jens Maus].
* Added more gamepad controller configurations.
* New option rtg_viewport for optional cropping of the RTG display.
* Updated emulation core from WinUAE 3200b13.

Version 2.7.0dev:

* Merged JIT compiler updates from the ARAnyM project.
* Support for JIT compilation on x86-64 (Linux/Windows/OS X). It may contain
  bugs yet. FPU JIT is currently disabled by default for x86-64.
* JIT 64-bit direct memory exception handlers for Linux/Windows/OS X.
* Compile FS-UAE / Windows as large address aware for more virtual memory.
* Updated emulation core from WinUAE 3200b12.

Version 2.5.42dev:

* Map gamepad start button to menu when in Amiga joystick mode (not CD32).
* Map gamepad select button to pause action.
* Added/updated some XInput controller configs for DirectInput mode.

Version 2.5.41dev:

* Implement action_pause to make action key configurable.
* Separate auto-fire button (based on patch from S. Jordan).
* Dedicated auto-fire button mapped to "right trigger" by default.
* New boolean option jit_compiler (to enable/disable JIT compilation).
* New option jit_memory (=direct/indirect).