@@ -46,11 +46,7 @@
 /* WinUAE (or external libs) might be compiled with fastcall by default,
  * so we force all external functions to use cdecl calling convention. */
 
-#ifdef _WIN32
-#define UAECALL __cdecl
-#else
-#define UAECALL
-#endif
+#define UAECALL uae_cdecl
 
 /* Helpers to make it easy to import functions from plugins. */
 
